fix scrollbar ok

--- a/styles/scss/main/_tokyo.scss
+++ b/styles/scss/main/_tokyo.scss
@@ -260,7 +260,7 @@ h6 {
   left: 0;
   top: 0;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   z-index: 10;
   padding: 0px 100px;
   background-color: #fff;
@@ -268,7 +268,10 @@ h6 {
 }
 .tokyo_tm_all_wrap .leftpart_inner {
   width: 100%;
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .tokyo_tm_all_wrap .leftpart img {
   max-width: 150px;
@@ -277,6 +280,10 @@ h6 {
   padding: 50px 0px 40px 0px;
   width: 100%;
   float: left;
+}
+
+.tokyo_tm_all_wrap .leftpart .menu-content {
+  overflow-y: auto;
 }
 
 .tokyo_tm_all_wrap .leftpart .menu ul {
